# emtf-nnet

./: .pre-commit-config.yaml  README.md  setup.cfg  setup.py
emtf_nnet/: __init__.py  lazy_loader.py
emtf_nnet/architecture/: __init__.py  endless_common.py  endless_configs.py  endless_configs_test.py  endless_nnet_v3.py  endless_nnet_v3_test.py  endless_utils.py  endless_v3.py  endless_v3_test.py
emtf_nnet/keras/: __init__.py  callbacks.py  k_layers_batchnoru.py  k_layers_denzu.py  k_layers_denzufold.py  k_layers_normalisa.py  k_layers_sampling.py  k_layers_separable_conv2d.py  k_layers_tanhjo.py  k_layers_tanhlu.py  k_losses_huber.py  k_losses_logcosh.py  k_optimizers_adamoptim.py  k_quantization_quantize_configs.py  k_quantization_quantize_model.py  k_quantization_quantize_scheme.py  k_quantization_quantize_transforms.py  optimizers.py
emtf_nnet/keras/layers/: __init__.py  activity_regularization.py  feature_normalization.py  hard_tanh_activation.py  inverse_integer_lookup.py  linear_activation.py  mutated_batch_normalization.py  mutated_dense.py  mutated_dense_fold.py  mutated_depthwise_conv2d.py  quantizable_layer.py  sampling_layer.py  scale_activation.py  tanh_activation.py
emtf_nnet/keras/losses/: __init__.py  huber.py  log_cosh.py
emtf_nnet/keras/optimizers/: optimizers.py
emtf_nnet/keras/quantization/: __init__.py  default_quantize_configs.py  default_quantize_scheme.py  default_quantize_scheme_test.py  default_transforms.py  quantize_model.py  quantizers.py
emtf_nnet/keras/sparsity/: __init__.py  prune_low_magnitude.py  prune_registry.py  pruning_callbacks.py  pruning_impl.py  pruning_schedule.py  pruning_utils.py  pruning_wrapper.py
emtf_nnet/keras/utils/: __init__.py  array_utils.py  data_utils.py  np_utils.py  saving_utils.py
emtf_nnet/nest/: __init__.py  nest.py
emtf_nnet/ragged/: __init__.py  ragged_tensor_value.py
emtf_nnet/slices/: __init__.py  slices.py
emtf_nnet/sparse/: __init__.py  indexed_slices_value.py  sparse_tensor_value.py
patches/: tensorflow_model_optimization-0.7.0.patch
tests/: default_quantize_scheme_test.py  inverse_integer_lookup_test.py  mutated_batch_normalization_test.py  mutated_dense_test.py  mutated_depthwise_conv2d_test.py  nest_test.py
