[metadata]
name = emtf-nnet
version = 0.0.1
author = Jia Fu Low
author_email = jia.fu.low@cern.ch
license = Apache
license_file = LICENSE
description = Useful tools for EMTF neural net
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jiafulow/emtf-nnet
project_urls =
    Bug Tracker = https://github.com/jiafulow/emtf-nnet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[flake8]
# E203: whitespace before ':'
# E402: module level import not at top of file
# E501: line too long
extend-ignore = E203, E402, E501
max-line-length = 88
count = True
statistics = True

[isort]
profile = black
