[metadata]
name = emtf-nnet
version = 0.0.1
author = Jia Fu Low
author_email = jia.fu.low@cern.ch
license = Apache
license_file = LICENSE
description = Useful tools for EMTF neural net
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jiafulow/emtf-nnet
project_urls =
    Bug Tracker = https://github.com/jiafulow/emtf-nnet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[flake8]
# E111 indentation is not a multiple of four
# E114 indentation is not a multiple of four (comment)
# E129 visually indented line with same indent as next logical line
# E203 whitespace before ':'
# E265 block comment should start with '# '
# E501 line too long
# F401 `module` imported but unused
# W503 line break before binary operator
extend-ignore = E111, E114, E129, E203, E265, E501, F401, W503
max-line-length = 88
count = True
statistics = True

[isort]
profile = black
